fixed picture shadow, mobile no longer has x-overflow issue

--- a/src/components/Home/intro.css
+++ b/src/components/Home/intro.css
@@ -68,7 +68,7 @@
 }
 
 .profile-picture-container {
-    padding: 20px;
+    padding: 30px;
 }
 
 @media (800px <= width){
